# SZ3-fork

./: .gitignore  CMakeLists.txt  QPET_README.md  README.md
.github/workflows/: cmake.yml
QoZ/qoi/: QoIInfo.hpp
TODO_note/: 01_plan.md  02_config_mods.md  03_module_boundaries.md  04_qoi_module.md  05_qpet_quantizer.md  06_qpet_decomp.md  07_integration.md  08_data_layout.md  09_testing_plan.md  10_00_questions.md  10_01_plan_overview.md  10_02_pointwise_qoi.md  10_03_regional_mean.md  10_04_regional_mean_sq.md  10_05_test_plan.md
include/SZ3/api/impl/: SZAlgoLorenzoReg.hpp  SZDispatcher.hpp
include/SZ3/decomposition/: QpetBlockDecomp.hpp
include/SZ3/qoi/: EBProvider.hpp  PointwiseEBProvider.hpp  QoI.hpp  QoIIf.hpp  QoIX2.hpp  QoIXLin.hpp  RegionalMean.hpp  RegionalMeanSq.hpp
include/SZ3/quantizer/: EBLogQnt.hpp  QpetQnt.hpp  Quantizer.hpp
include/SZ3/utils/: Config.hpp
tools/sz3/: sz3_qpet_test.cpp
